terraform/istio/resources/gateway-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: team-divider-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - team-divider.local
        - team-divider.vault

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: istio-ingressgateway-certs  # Name of the TLS secret
      hosts:
        - team-divider.local
        - team-divider.vault
